--- a/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
+++ b/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
@@ -814,19 +814,17 @@ spec:
           tee coverity-results-raw.json |
           csgrep --mode=evtstat
 
-        # Set KFP_GIT_URL to https://gitlab.cee.redhat.com/osh/known-false-positives.git for internal Konflux instance
-        # p01 will be decommissionned due to lack of IBM support
         if [[ "${KFP_GIT_URL}" == "SITE_DEFAULT" ]]; then
-          case "${BUILD_PLR_LOG_URL}" in
-          *konflux.apps.stone-prod-p02.hjvn.p1.openshiftapps.com* | *konflux.apps.stone-prod-p01.wcfb.p1.openshiftapps.com*)
-            echo "the task is running within Red Hat network, set KFP_GIT_URL to https://gitlab.cee.redhat.com/osh/known-false-positives.git"
+          # Set KFP_GIT_URL to https://gitlab.cee.redhat.com/osh/known-false-positives.git for internal Konflux instances
+          PROBE_URL="https://gitlab.cee.redhat.com/osh/known-false-positives"
+          echo -n "Probing ${PROBE_URL}... "
+          if curl --fail --head --max-time 60 --no-progress-meter "${PROBE_URL}" > >(head -1); then
+            echo "Setting KFP_GIT_URL to https://gitlab.cee.redhat.com/osh/known-false-positives.git"
             KFP_GIT_URL="https://gitlab.cee.redhat.com/osh/known-false-positives.git"
-            ;;
-          *)
-            echo "the task is not running within Red Hat network, set KFP_GIT_URL to empty string"
+          else
+            echo "Setting KFP_GIT_URL to empty string"
             KFP_GIT_URL=
-            ;;
-          esac
+          fi
         fi
 
         # We check if the KFP_GIT_URL variable is set to apply the filters or not
