--- a/task/coverity-availability-check/0.2/coverity-availability-check.yaml
+++ b/task/coverity-availability-check/0.2/coverity-availability-check.yaml
@@ -63,8 +63,9 @@ spec:
           echo 'No license file for Coverity was detected. Coverity scan will not be executed...'
           echo 'Please, create a secret called 'cov-license' with a key called 'cov-license' and the value containing the Coverity license'
           note="Task $(context.task.name) failed: No license file for Coverity was detected. Please, create a secret called 'cov-license' with a key called 'cov-license' and the value containing the Coverity license"
-          TEST_OUTPUT=$(make_result_json -r ERROR -t "$note")
+          TEST_OUTPUT=$(make_result_json -r ERROR -t "$note" -f 1)
           echo -n "failed" | tee "$(results.STATUS.path)"
+          echo "${TEST_OUTPUT}" | tee "$(results.TEST_OUTPUT.path)"
           exit 0
         fi
 
@@ -76,8 +77,9 @@ spec:
           echo 'No authentication token for downloading Coverity image detected. Coverity scan will not be executed...'
           echo 'Please, create an imagePullSecret named 'auth-token-coverity-image' with the authentication token for pulling the Coverity image'
           note="Task $(context.task.name) failed: No authentication token for downloading Coverity image detected. Please, create an imagePullSecret named 'auth-token-coverity-image' with the authentication token for pulling the Coverity image"
-          TEST_OUTPUT=$(make_result_json -r ERROR -t "$note")
+          TEST_OUTPUT=$(make_result_json -r ERROR -t "$note" -f 1)
           echo -n "failed" | tee "$(results.STATUS.path)"
+          echo "${TEST_OUTPUT}" | tee "$(results.TEST_OUTPUT.path)"
           exit 0
         fi
 
@@ -85,4 +87,4 @@ spec:
         # shellcheck disable=SC2034
         TEST_OUTPUT=$(make_result_json -r SUCCESS -s 1 -t "$note")
         echo -n "success" | tee "$(results.STATUS.path)"
-        echo "${TEST_OUTPUT:-${ERROR_OUTPUT}}" | tee "$(results.TEST_OUTPUT.path)"
+        echo "${TEST_OUTPUT}" | tee "$(results.TEST_OUTPUT.path)"
