AIPCC-632: Add ModelCar OCI TA task
Signed-off-by: Victor M. <vmugicag@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -121,6 +121,9 @@
 /task/oci-copy          @ralphbean
 /task/oci-copy-oci-ta   @ralphbean
 
+# renovate groupName=modelcar-oci
+/task/modelcar-oci-ta   @Victoremepunto @ralphbean 
+
 # renovate groupName=buildpack
 /task/build-paketo-builder-oci-ta @cmoulliard
 
