--- a/renovate.json
+++ b/renovate.json
@@ -161,6 +161,12 @@
       ]
     },
     {
+      "groupName": "modelcar-oci",
+      "matchFileNames": [
+        "task/modelcar-oci-ta/**"
+      ]
+    },
+    {
       "groupName": "opm",
       "matchFileNames": [
         "task/operator-sdk-generate-bundle/**",
