feat: Add TEST_OUTPUT to sealights go to capture sealights glitches
Signed-off-by: flacatus <flacatus@redhat.com>

--- a/task/sealights-go-oci-ta/0.1/sealights-go-oci-ta.yaml
+++ b/task/sealights-go-oci-ta/0.1/sealights-go-oci-ta.yaml
@@ -25,6 +25,9 @@ spec:
       description: The Trusted Artifact URI pointing to the artifact with
         the application source code.
       type: string
+    - name: TEST_OUTPUT
+      type: string
+      description: "Stores the sealights results in json format to warn users in case of any Sealights glitches."
   params:
     - name: SOURCE_ARTIFACT
       description: The Trusted Artifact URI pointing to the artifact with
@@ -123,13 +126,20 @@ spec:
         #!/bin/bash
         set -euo pipefail
 
-        export SEALIGHTS_TOKEN BUILD_NAME BSID PACKAGES_EXCLUDED_ENUM
-
         SEALIGHTS_TOKEN="$(cat /usr/local/sealights-credentials/token)"
         BUILD_NAME="${REVISION}_$(date +'%y%m%d.%H%M')"
         PACKAGES_EXCLUDED_ENUM="$(IFS=,; printf "%s," "$@" | sed 's/,$//')"
 
-        slcli config init --lang go --token "${SEALIGHTS_TOKEN}"
+        handle_error() {
+          local error_message=$1
+
+          echo -e "[ERROR]: Sealights scanning failed due reason: ${error_message}"
+          TEST_OUTPUT="{\"result\": \"ERROR\"}"
+          echo "${TEST_OUTPUT}" > "$(results.TEST_OUTPUT.path)"
+
+          # We should not to let fail sealights scans. If for some reason is down Konflux CI should not fail.
+          exit 0
+        }
 
         # In case is coming from /retest event then it's a pull_request
         # if event type is not push and pull_request_number is not empty then is a pull_request
@@ -138,17 +148,29 @@ spec:
           TEST_EVENT="pull_request"
         fi
 
-        if [ -n "${TEST_EVENT}" ] && [ "${TEST_EVENT}" = "pull_request" ]; then
-          echo "[INFO] Creating build session id from a ${TEST_EVENT} event source code: [ component: ${COMPONENT}, target-branch: ${TARGET_BRANCH}, pull-request-number ${PULL_REQUEST_NUMBER}, latest-commit: ${REVISION} ]"
-          slcli config create-pr-bsid --app "${COMPONENT}" --target-branch "${TARGET_BRANCH}" \
-            --pull-request-number "${PULL_REQUEST_NUMBER}" --latest-commit "${REVISION}" --repository-url "${REPOSITORY_URL}"
-        else
-          echo "[INFO] Creating build session ID (BSID) ${TEST_EVENT} event source code [ component: ${COMPONENT}, branch: ${BRANCH}, build: ${BUILD_NAME} ]"
-          slcli config create-bsid --app "${COMPONENT}" --branch "${BRANCH}" --build "${BUILD_NAME}"
+        if ! slcli config init --lang go --token "${SEALIGHTS_TOKEN}"; then
+          handle_error "Failed to initialize Sealights configuration."
         fi
 
-        slcli scan --packages-excluded "${PACKAGES_EXCLUDED_ENUM}" --bsid buildSessionId.txt --path-to-scanner /usr/local/bin/slgoagent \
-          --workspacepath ./ --scm git --scmProvider "${SCM_PROVIDER}" --scmVersion "0" --scmBaseUrl "${REPOSITORY_URL}" --debug="${DEBUG}"
+        if [ -n "${TEST_EVENT}" ] && [ "${TEST_EVENT}" = "pull_request" ]; then
+          echo "[INFO] Creating build session id from a ${TEST_EVENT} event source code: [ component: ${COMPONENT}, target-branch: ${TARGET_BRANCH}, pull-request-number ${PULL_REQUEST_NUMBER}, latest-commit: ${REVISION} ]"
+          if ! slcli config create-pr-bsid --app "${COMPONENT}" --target-branch "${TARGET_BRANCH}" \
+            --pull-request-number "${PULL_REQUEST_NUMBER}" --latest-commit "${REVISION}" --repository-url "${REPOSITORY_URL}"; then
+            handle_error "Failed to create PR-based build session ID."
+          fi
+        else
+          echo "[INFO] Creating build session ID (BSID) ${TEST_EVENT} event source code [ component: ${COMPONENT}, branch: ${BRANCH}, build: ${BUILD_NAME} ]"
+          if ! slcli config create-bsid --app "${COMPONENT}" --branch "${BRANCH}" --build "${BUILD_NAME}"; then
+            handle_error "Failed to create build session ID."
+          fi
+        fi
+
+        if ! slcli scan --packages-excluded "${PACKAGES_EXCLUDED_ENUM}" --bsid buildSessionId.txt --path-to-scanner /usr/local/bin/slgoagent \
+          --workspacepath ./ --scm git --scmProvider "${SCM_PROVIDER}" --scmVersion "0" --scmBaseUrl "${REPOSITORY_URL}" --fail-build --debug="${DEBUG}"; then
+          handle_error "Sealights scan failed."
+        fi
+
+        echo "{\"result\": \"SUCCESS\"}" > "$(results.TEST_OUTPUT.path)"
 
         echo -n "$(cat buildSessionId.txt)" > "$(results.sealights-bsid.path)"
         echo -n "$BUILD_NAME" > "$(results.sealights-build-name.path)"
