--- a/pipelines/maven-zip-build-oci-ta/maven-zip-build-oci-ta.yaml
+++ b/pipelines/maven-zip-build-oci-ta/maven-zip-build-oci-ta.yaml
@@ -145,7 +145,7 @@ spec:
     - build-oci-artifact
     taskRef:
       name: sast-snyk-check-oci-ta
-      version: "0.3"
+      version: "0.4"
     when:
     - input: $(params.skip-checks)
       operator: in
@@ -154,8 +154,10 @@ spec:
     workspaces: []
   - name: sast-coverity-check
     params:
-    - name: image-url
+    - name: image-digest
       value: $(tasks.build-oci-artifact.results.IMAGE_URL)
+    - name: image-url
+      value: $(tasks.build-image-index.results.IMAGE_URL)
     - name: SOURCE_ARTIFACT
       value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
     - name: CACHI2_ARTIFACT
@@ -164,7 +166,7 @@ spec:
     - coverity-availability-check
     taskRef:
       name: sast-coverity-check-oci-ta
-      version: "0.2"
+      version: "0.3"
     when:
     - input: $(params.skip-checks)
       operator: in
@@ -209,8 +211,10 @@ spec:
     workspaces: []
   - name: sast-unicode-check
     params:
-    - name: image-url
+    - name: image-digest
       value: $(tasks.build-oci-artifact.results.IMAGE_URL)
+    - name: image-url
+      value: $(tasks.build-image-index.results.IMAGE_URL)
     - name: SOURCE_ARTIFACT
       value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
     - name: CACHI2_ARTIFACT
@@ -219,7 +223,7 @@ spec:
     - build-oci-artifact
     taskRef:
       name: sast-unicode-check-oci-ta
-      version: "0.1"
+      version: "0.2"
     when:
     - input: $(params.skip-checks)
       operator: in
