feat(KFLUXVNGD-185): add task for building helm charts
The task can be used in order to package and push a Helm chart
to an OCI repository.

Signed-off-by: Yftach Herzog <yherzog@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -89,6 +89,10 @@
 /task/rpms-signature-scan   @amisstea @avi-biton @gbenhaim @yftacherzog
 /task/verify-signed-rpms    @amisstea @avi-biton @gbenhaim @yftacherzog
 
+# renovate groupName=vanguard
+/task/build-helm-chart          @amisstea @avi-biton @gbenhaim @yftacherzog
+/task/build-helm-chart-oci-ta   @amisstea @avi-biton @gbenhaim @yftacherzog
+
 # renovate groupName=eaas
 /stepactions/eaas-copy-secrets-to-ephemeral-cluster         @konflux-ci/eaas-maintainers
 /stepactions/eaas-create-ephemeral-cluster-hypershift-aws   @konflux-ci/eaas-maintainers
