--- a/renovate.json
+++ b/renovate.json
@@ -199,6 +199,13 @@
         "task/sealights-nodejs-oci-ta/**",
         "task/sealights-python-oci-ta/**"
       ]
+    },
+    {
+      "groupName": "vanguard",
+      "matchFileNames": [
+        "task/build-helm-chart-oci-ta/**",
+        "task/build-helm-chart/**"
+      ]
     }
   ],
   "postUpdateOptions": [
