--- a/task/sealights-go-oci-ta/0.1/sealights-go-oci-ta.yaml
+++ b/task/sealights-go-oci-ta/0.1/sealights-go-oci-ta.yaml
@@ -21,6 +21,12 @@ spec:
     - name: sealights-build-name
       type: string
       description: "A unique build name generated using the commit SHA and current date to prevent conflicts during test reruns."
+    - name: sealights-agent-version
+      type: string
+      description: "A version of the Sealights Go Agent"
+    - name: sealights-cli-version
+      type: string
+      description: "A version of the Sealights Go CLI"
     - name: SOURCE_ARTIFACT
       description: The Trusted Artifact URI pointing to the artifact with
         the application source code.
@@ -122,6 +128,9 @@ spec:
       script: |
         #!/bin/bash
         set -euo pipefail
+
+        echo -n "${AGENT_VERSION}" > "$(results.sealights-agent-version.path)"
+        echo -n "${CLI_VERSION}" > "$(results.sealights-cli-version.path)"
 
         export SEALIGHTS_TOKEN BUILD_NAME BSID PACKAGES_EXCLUDED_ENUM
 
