Add missing task version labels
With the help of the hack/check-task-version-labels.sh I added a
app.kubernetes.io/version label to all the tasks that don't have it.

--- a/task/download-sbom-from-url-in-attestation/0.1/download-sbom-from-url-in-attestation.yaml
+++ b/task/download-sbom-from-url-in-attestation/0.1/download-sbom-from-url-in-attestation.yaml
@@ -4,6 +4,8 @@ metadata:
   annotations:
     tekton.dev/tags: "sbom, attestation, cosign"
   name: download-sbom-from-url-in-attestation
+  labels:
+    app.kubernetes.io/version: "0.1"
 spec:
   description: |-
     Get the SBOM for an image by downloading the OCI blob referenced in the image attestation.
