--- a/task/eaas-provision-space/0.1/eaas-provision-space.yaml
+++ b/task/eaas-provision-space/0.1/eaas-provision-space.yaml
@@ -3,6 +3,8 @@ apiVersion: tekton.dev/v1
 kind: Task
 metadata:
   name: eaas-provision-space
+  labels:
+    app.kubernetes.io/version: "0.1"
 spec:
   description: >-
     Provisions an ephemeral namespace on an EaaS cluster using a crossplane namespace claim.
