--- a/task/gather-deploy-images/0.1/gather-deploy-images.yaml
+++ b/task/gather-deploy-images/0.1/gather-deploy-images.yaml
@@ -2,6 +2,8 @@ apiVersion: tekton.dev/v1
 kind: Task
 metadata:
   name: gather-deploy-images
+  labels:
+    app.kubernetes.io/version: "0.1"
 spec:
   description: Extract images from deployment YAML to pass to EC for validation
   workspaces:
