--- a/task/operator-sdk-generate-bundle/0.1/operator-sdk-generate-bundle.yaml
+++ b/task/operator-sdk-generate-bundle/0.1/operator-sdk-generate-bundle.yaml
@@ -3,6 +3,8 @@ apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: operator-sdk-generate-bundle
+  labels:
+    app.kubernetes.io/version: "0.1"
 spec:
   description: Generate an OLM bundle using the operator-sdk
   params:
