--- a/task/opm-get-bundle-version/0.1/opm-get-bundle-version.yaml
+++ b/task/opm-get-bundle-version/0.1/opm-get-bundle-version.yaml
@@ -3,6 +3,8 @@ apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: opm-get-bundle-version
+  labels:
+    app.kubernetes.io/version: "0.1"
 spec:
   description: Fetch the current version of the provided OLM bundle image
   params:
