--- a/task/upload-sbom-to-trustification/0.1/upload-sbom-to-trustification.yaml
+++ b/task/upload-sbom-to-trustification/0.1/upload-sbom-to-trustification.yaml
@@ -4,6 +4,8 @@ metadata:
   annotations:
     tekton.dev/tags: "sbom, trustification"
   name: upload-sbom-to-trustification
+  labels:
+    app.kubernetes.io/version: "0.1"
 spec:
   description: |-
     Upload an SBOM file to [Trustification] using the [BOMbastic] API.
