--- a/task/acs-deploy-check/0.1/acs-deploy-check.yaml
+++ b/task/acs-deploy-check/0.1/acs-deploy-check.yaml
@@ -7,6 +7,8 @@ metadata:
     task.results.type: roxctl-deployment-check
     task.results.container: step-report
     task.output.location: logs
+  labels:
+    app.kubernetes.io/version: "0.1"
 spec:
   description: >-
     Policy check a deployment with StackRox/RHACS This tasks allows you to check
