--- a/task/ecosystem-cert-preflight-checks/0.1/ecosystem-cert-preflight-checks.yaml
+++ b/task/ecosystem-cert-preflight-checks/0.1/ecosystem-cert-preflight-checks.yaml
@@ -2,6 +2,8 @@ apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: ecosystem-cert-preflight-checks
+  labels:
+    app.kubernetes.io/version: "0.1"
 spec:
   description: >-
     Scans container images for certification readiness
