--- a/task/opm-render-bundles/0.1/opm-render-bundles.yaml
+++ b/task/opm-render-bundles/0.1/opm-render-bundles.yaml
@@ -3,6 +3,8 @@ apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: opm-render-bundles
+  labels:
+    app.kubernetes.io/version: "0.1"
 spec:
   description: Create a catalog index and render the provided bundles into it
   params:
