--- a/task/update-deployment/0.1/update-deployment.yaml
+++ b/task/update-deployment/0.1/update-deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: tekton.dev/v1
 kind: Task
 metadata:
   name: update-deployment
+  labels:
+    app.kubernetes.io/version: "0.1"
 spec:
   description: Task to update deployment with newly built image in gitops repository.
   params:
