--- a/task/verify-signed-rpms/0.1/verify-signed-rpms.yaml
+++ b/task/verify-signed-rpms/0.1/verify-signed-rpms.yaml
@@ -8,6 +8,8 @@ metadata:
     build.appstudio.redhat.com/expiry-message: 'Instead of using this task, switch
       to task rpms-signature-scan
       (https://quay.io/repository/konflux-ci/tekton-catalog/task-rpms-signature-scan)'
+  labels:
+    app.kubernetes.io/version: "0.1"
 spec:
   params:
     - name: INPUT
