Add missing task version labels
With the help of the hack/check-task-version-labels.sh I added a
app.kubernetes.io/version label to all the tasks that don't have it.

--- a/task/build-helm-chart-oci-ta/0.1/build-helm-chart-oci-ta.yaml
+++ b/task/build-helm-chart-oci-ta/0.1/build-helm-chart-oci-ta.yaml
@@ -3,6 +3,8 @@ apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: build-helm-chart-oci-ta
+  labels:
+    app.kubernetes.io/version: "0.1"
 spec:
   description: |-
     The task packages and pushes a Helm chart to an OCI repository.
