fix: generated files
Running generate-everything.sh with no changes results in changes.
This fails CI for other PRs.

Signed-off-by: Yftach Herzog <yherzog@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -242,7 +242,9 @@
     },
     {
       "customType": "regex",
-      "fileMatch": ["^task/build-vm-image/.*/build-vm-image.yaml"],
+      "fileMatch": [
+        "^task/build-vm-image/.*/build-vm-image.yaml"
+      ],
       "matchStrings": [
         "BUILDAH_IMAGE\\s*\\n\\s*value:\\s*['\"]?(?<depName>[^'\":]+):(?<currentValue>[^'\":\\s]+)['\"]?"
       ],
