Add run-script-oci-ta task to run arbitrary scripts as part of the build pipeline
Signed-off-by: Julen Landa Alustiza <jlanda@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -124,6 +124,9 @@
 # renovate groupName=buildpack
 /task/build-paketo-builder-oci-ta @cmoulliard
 
+# renovate groupName=oci-run-script
+/task/run-script-oci-ta @konflux-ci/build-maintainers @Zokormazo @arewm
+
 # These are auto-generated and often require changes when tasks change.
 # Allow anyone with write access to approve the changes.
 /pipelines/*/README.md
