--- a/renovate.json
+++ b/renovate.json
@@ -206,6 +206,12 @@
         "task/build-helm-chart-oci-ta/**",
         "task/build-helm-chart/**"
       ]
+    },
+    {
+      "groupName": "oci-run-script",
+      "matchFileNames": [
+        "task/run-script-oci-ta/**"
+      ]
     }
   ],
   "postUpdateOptions": [
